# ClawZ

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  build-manifest.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  promote-stable.yml  publish-emergency.yml  reconcile-notarization.yml  release.yml
docs/: release-dry-run-checklist.md
resources/cli/: openclaw
scripts/: build-dmg.sh  build-manifest.mjs  bundle-openclaw.sh  download-node.sh  gen-build-info.sh  reconcile_notarization.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agents.rs  backup.rs  channel.rs  cli.rs  config.rs  cron.rs  env_check.rs  gateway.rs  installer.rs  logs.rs  mod.rs  model.rs  scenario.rs  system.rs  usage.rs
src-tauri/theme-packs/t01-morning-briefing/: manifest.json
src-tauri/theme-packs/t03-duty-customer-service/: manifest.json
src-tauri/theme-packs/t05-daily-reflection/: manifest.json
src/lib/: bindings.ts  channelGuides.ts  channels.ts  constants.ts  env.ts  exportScenario.ts  logos.ts  onboardingProgress.ts  providers.ts  retiredModels.ts  scenarioTemplates.ts  tauri.ts
src/pages/: AgentManagement.tsx  ChannelManagement.tsx  CostDashboard.tsx  (+8 more)
(+63 files in other folders)
