[package]
name = "clawz"
version = "0.1.2"
description = "ClawZ - AI Agent 场景工坊"
authors = ["ClawZ Team"]
license = "MIT"
repository = "https://github.com/clawz-ai/ClawZ"
homepage = "https://github.com/clawz-ai/ClawZ"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "clawz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
chrono = "0.4"

tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
urlencoding = "2"
open = "5"
shlex = "1"
libc = "0.2"
tauri-plugin-dialog = "2.6.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
